# P2---LOVELACE

./: ML_train.ipynb  README.md  bancodedados.py  dataset_celulares_final.csv  datasetmaker.py  import requests.py  main.ipynb  main.py  pyproject.toml  questoes.csv  recomendador.ipynb  recomendador.py  requirements.txt  teste.ipynb
fluttercode/: pubspec.yaml
fluttercode/android/app/: build.gradle
fluttercode/ios/: Podfile
fluttercode/lib/: app_state.dart  index.dart  main.dart
fluttercode/lib/backend/api_requests/: api_calls.dart  api_manager.dart
fluttercode/lib/components/main_web_nav/: main_web_nav_widget.dart
fluttercode/lib/pages/home_page/: home_page_model.dart  home_page_widget.dart
fluttercode/macos/Runner/Configs/: AppInfo.xcconfig
fluttercode/projetos_2_engcommp_lovelace/ios/Runner.xcodeproj/: project.pbxproj
fluttercode/projetos_2_engcommp_lovelace/lib/: main.dart
fluttercode/test/: widget_test.dart
projetos2engcommplovelace-9jh94s/: pubspec.yaml
projetos2engcommplovelace-9jh94s/ios/Runner/: Info.plist
projetos2engcommplovelace-9jh94s/lib/: app_state.dart  main.dart
projetos2engcommplovelace-9jh94s/lib/flutter_flow/: flutter_flow_util.dart
projetos2engcommplovelace-9jh94s/macos/Runner.xcodeproj/: project.pbxproj
projetos2engcommplovelace-9jh94s/web/: index.html
projetos2engcommplovelace-9jh94s/windows/runner/: main.cpp
projetos_2_engcommp_lovelace/: README.md
projetos_2_engcommp_lovelace/lib/: index.dart
versao final do app (codigos necessarios)/projetos_2_engcommp_lovelace/windows/: CMakeLists.txt
(+30 files in other folders)
